# flightradar24-api

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: client.rs  error.rs  flight_tracks_helper.rs  helper.rs  lib.rs  main.rs
tests/: tests.rs
