[package]
name = "flightradar24-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
