[package]
name = "flightradar24-api"
version = "0.1.0"
edition = "2021"
description = "API Wrapper for FlightRadar24 data"
license = "MIT OR Apache-2.0"
exclude = [
    ".gitignore",
    ".env",
]

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"